--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <div class="text">
     <h1>Automated movie rating checker</h1>
     <input id="input">
-    <button id="button">Calculate</button>
+    <button id="button">Check age</button>
     <p>Enter your age.</p>
     <p id="result"></p>
-    <p id='thanks'></p>
+    <p id="thanks"></p>
     </div>
     <script src="script.js"></script>
   </body>
